Player vs Computer
added P vs CPU functionality; is working fine, only for one-dice game - needs more testing...
need to implement PvCPU for 2-dice game
idea: make Computer more prone to taking chances and let this behavior to be at the selection of the player

--- a/4-DOM-Pig-Game/index.html
+++ b/4-DOM-Pig-Game/index.html
@@ -10,7 +10,7 @@
     </head>
 
     <body>
-        <div class="wrapper-initialization" id="pre-initialization">
+        <div class="wrapper-initialization clearfix" id="pre-initialization">
             <form>
                 <h3>Preferences</h3>
                 <h4>One or Two</h4>
